Publishing python package 2016 post.

--- a/drafts/how-to-obtain-new-contributors.html
+++ b/drafts/how-to-obtain-new-contributors.html
@@ -22,28 +22,21 @@
 
 
 <meta name="author" content="Taylor Brazelton" />
-<meta name="description" content="Hello internet! I'm just going to get stright to the point, I use to have a personal/tech blog @ tech-fyi.net but like bread, it got stale. I started it over 7 years ago when I was in high school. Since then, I have graduated with a bachelor's degree in Computer Science from Purdue and have moved on to more interesting things in life. More soon. Don't forget to interact with me on Twitter!" />
-<meta name="keywords" content="blog, github, blogging, tech-fyi, new, first, post">
+<meta name="description" content="" />
+<meta name="keywords" content="">
 <meta property="og:site_name" content="TAYLOR BRAZELTON"/>
-<meta property="og:title" content="Github Blogging"/>
-<meta property="og:description" content="Hello internet! I'm just going to get stright to the point, I use to have a personal/tech blog @ tech-fyi.net but like bread, it got stale. I started it over 7 years ago when I was in high school. Since then, I have graduated with a bachelor's degree in Computer Science from Purdue and have moved on to more interesting things in life. More soon. Don't forget to interact with me on Twitter!"/>
+<meta property="og:title" content="How To Obtain New Contributors"/>
+<meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://taylorbrazelton.com/2016/Jun/23/github-blogging/"/>
+<meta property="og:url" content="https://taylorbrazelton.com/drafts/how-to-obtain-new-contributors.html"/>
 <meta property="og:type" content="article"/>
-<meta property="article:published_time" content="2016-06-23 21:06:00-04:00"/>
-<meta property="article:modified_time" content="2016-06-23 21:06:00-04:00"/>
+<meta property="article:published_time" content="2016-12-06 20:00:00-05:00"/>
+<meta property="article:modified_time" content="2016-12-06 20:00:00-05:00"/>
 <meta property="article:author" content="https://taylorbrazelton.com/author/taylor-brazelton.html">
-<meta property="article:section" content="general"/>
-<meta property="article:tag" content="blog"/>
-<meta property="article:tag" content="github"/>
-<meta property="article:tag" content="blogging"/>
-<meta property="article:tag" content="tech-fyi"/>
-<meta property="article:tag" content="new"/>
-<meta property="article:tag" content="first"/>
-<meta property="article:tag" content="post"/>
+<meta property="article:section" content="open, source, obtaining, new, contibutors, getting, enticing, helping"/>
 <meta property="og:image" content="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120">
 
-  <title>TAYLOR BRAZELTON &ndash; Github Blogging</title>
+  <title>TAYLOR BRAZELTON &ndash; How To Obtain New Contributors</title>
 </head>
 <body>
   <aside>
@@ -84,27 +77,18 @@
 
 <article class="single">
   <header>
-    <h1 id="github-blogging">Github Blogging</h1>
+    <h1 id="how-to-obtain-new-contributors">How To Obtain New Contributors</h1>
     <p>
-          Posted on Thu 23 June 2016 in <a href="https://taylorbrazelton.com/category/general.html">general</a>
+          Posted on Tue 06 December 2016 in <a href="https://taylorbrazelton.com/category/open-source-obtaining-new-contibutors-getting-enticing-helping.html">open, source, obtaining, new, contibutors, getting, enticing, helping</a>
 
 
     </p>
   </header>
   <div>
-    <p>Hello internet!</p>
-<p>I'm just going to get stright to the point, I use to have a personal/tech blog @ <a href="http://tech-fyi.net">tech-fyi.net</a> but like bread, it got stale. I started it over 7 years ago when I was in high school. Since then, I have graduated with a bachelor's degree in Computer Science from Purdue and have moved on to more interesting things in life. </p>
-<p>More soon. Don't forget to interact with me on <a href="http://twitter.com/Ryanb58">Twitter</a>!</p>
+    
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="https://taylorbrazelton.com/tag/blog.html">blog</a>
-      <a href="https://taylorbrazelton.com/tag/github.html">github</a>
-      <a href="https://taylorbrazelton.com/tag/blogging.html">blogging</a>
-      <a href="https://taylorbrazelton.com/tag/tech-fyi.html">tech-fyi</a>
-      <a href="https://taylorbrazelton.com/tag/new.html">new</a>
-      <a href="https://taylorbrazelton.com/tag/first.html">first</a>
-      <a href="https://taylorbrazelton.com/tag/post.html">post</a>
     </p>
   </div>
 
