--- a/drafts/on-prems-the-engineers-perspective.html
+++ b/drafts/on-prems-the-engineers-perspective.html
@@ -53,7 +53,7 @@
       </a>
       <h1><a href="https://taylorbrazelton.com">Taylor Brazelton</a></h1>
 
-<p>cat /dev/random | more</p>
+<p>loaded with information</p>
       <nav>
         <ul class="list">
           <li><a href="https://taylorbrazelton.com/pages/about-me.html#about-me">About Me</a></li>
@@ -180,7 +180,7 @@ http://www.cbronline.com/news/cloud/private/how-to-build-a-private-cloud-5-best-
   "name": " TAYLOR BRAZELTON ",
   "url" : "https://taylorbrazelton.com",
   "image": "https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120",
-  "description": "Loaded with random information, Taylor Brazelton seeks to share what he has learned via this blog."
+  "description": "Loaded with information, Taylor Brazelton seeks to share this information by distributing some to the world on this blog."
 }
 </script>
 </body>
