--- a/archives.html
+++ b/archives.html
@@ -22,11 +22,11 @@
 
 
     <meta name="author" content="Taylor Brazelton" />
-    <meta name="description" content="Loaded with random information, Taylor Brazelton seeks to share what he has learned via this blog." />
+    <meta name="description" content="Loaded with information, Taylor Brazelton seeks to share this information by distributing some to the world on this blog." />
 <meta property="og:site_name" content="TAYLOR BRAZELTON"/>
 <meta property="og:type" content="blog"/>
 <meta property="og:title" content="TAYLOR BRAZELTON"/>
-<meta property="og:description" content="Loaded with random information, Taylor Brazelton seeks to share what he has learned via this blog."/>
+<meta property="og:description" content="Loaded with information, Taylor Brazelton seeks to share this information by distributing some to the world on this blog."/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="https://taylorbrazelton.com"/>
 <meta property="og:image" content="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120">
@@ -42,7 +42,7 @@
       </a>
       <h1><a href="https://taylorbrazelton.com">Taylor Brazelton</a></h1>
 
-<p>cat /dev/random | more</p>
+<p>loaded with information</p>
       <nav>
         <ul class="list">
           <li><a href="https://taylorbrazelton.com/pages/about-me.html#about-me">About Me</a></li>
@@ -80,6 +80,8 @@
     <dl>
       <dt>Thu 15 September 2016</dt>
       <dd><a href="https://taylorbrazelton.com/2016/Sep/15/writing-better-code/">Writing Better Code</a></dd>
+      <dt>Mon 12 September 2016</dt>
+      <dd><a href="https://taylorbrazelton.com/2016/Sep/12/top-2016-python-tools-and-packages/">Top 2016 Python Tools And Packages</a></dd>
       <dt>Thu 28 July 2016</dt>
       <dd><a href="https://taylorbrazelton.com/2016/Jul/28/raspberry-pi-arcade-eumlator-price-out/">Raspberry Pi Arcade Eumlator Price Out</a></dd>
       <dt>Fri 22 July 2016</dt>
@@ -119,7 +121,7 @@
   "name": " TAYLOR BRAZELTON ",
   "url" : "https://taylorbrazelton.com",
   "image": "https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120",
-  "description": "Loaded with random information, Taylor Brazelton seeks to share what he has learned via this blog."
+  "description": "Loaded with information, Taylor Brazelton seeks to share this information by distributing some to the world on this blog."
 }
 </script>
 </body>
