--- a/drafts/9-reasons-you-should-be-using-visual-studio-code.html
+++ b/drafts/9-reasons-you-should-be-using-visual-studio-code.html
@@ -22,28 +22,27 @@
 
 
 <meta name="author" content="Taylor Brazelton" />
-<meta name="description" content="Hello internet! I'm just going to get stright to the point, I use to have a personal/tech blog @ tech-fyi.net but like bread, it got stale. I started it over 7 years ago when I was in high school. Since then, I have graduated with a bachelor's degree in Computer Science from Purdue and have moved on to more interesting things in life. More soon. Don't forget to interact with me on Twitter!" />
-<meta name="keywords" content="blog, github, blogging, tech-fyi, new, first, post">
+<meta name="description" content="1) Code Completion Microsoft's added amazing intelesense support to Code. Reaction To: https://blog.michaelckennedy.net/2015/11/19/9-reasons-you-should-be-using-pycharm/" />
+<meta name="keywords" content="cool, python, std, standard, library, functions">
 <meta property="og:site_name" content="TAYLOR BRAZELTON"/>
-<meta property="og:title" content="Github Blogging"/>
-<meta property="og:description" content="Hello internet! I'm just going to get stright to the point, I use to have a personal/tech blog @ tech-fyi.net but like bread, it got stale. I started it over 7 years ago when I was in high school. Since then, I have graduated with a bachelor's degree in Computer Science from Purdue and have moved on to more interesting things in life. More soon. Don't forget to interact with me on Twitter!"/>
+<meta property="og:title" content="9 Reasons You Should Be Using Visual Studio Code"/>
+<meta property="og:description" content="1) Code Completion Microsoft's added amazing intelesense support to Code. Reaction To: https://blog.michaelckennedy.net/2015/11/19/9-reasons-you-should-be-using-pycharm/"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://taylorbrazelton.com/2016/Jun/23/github-blogging/"/>
+<meta property="og:url" content="https://taylorbrazelton.com/drafts/9-reasons-you-should-be-using-visual-studio-code.html"/>
 <meta property="og:type" content="article"/>
-<meta property="article:published_time" content="2016-06-23 21:06:00-04:00"/>
-<meta property="article:modified_time" content="2016-06-23 21:06:00-04:00"/>
+<meta property="article:published_time" content="2016-07-18 14:00:00-04:00"/>
+<meta property="article:modified_time" content="2016-07-18 00:00:00-04:00"/>
 <meta property="article:author" content="https://taylorbrazelton.com/author/taylor-brazelton.html">
-<meta property="article:section" content="general"/>
-<meta property="article:tag" content="blog"/>
-<meta property="article:tag" content="github"/>
-<meta property="article:tag" content="blogging"/>
-<meta property="article:tag" content="tech-fyi"/>
-<meta property="article:tag" content="new"/>
-<meta property="article:tag" content="first"/>
-<meta property="article:tag" content="post"/>
+<meta property="article:section" content="python"/>
+<meta property="article:tag" content="cool"/>
+<meta property="article:tag" content="python"/>
+<meta property="article:tag" content="std"/>
+<meta property="article:tag" content="standard"/>
+<meta property="article:tag" content="library"/>
+<meta property="article:tag" content="functions"/>
 <meta property="og:image" content="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120">
 
-  <title>TAYLOR BRAZELTON &ndash; Github Blogging</title>
+  <title>TAYLOR BRAZELTON &ndash; 9 Reasons You Should Be Using Visual Studio Code</title>
 </head>
 <body>
   <aside>
@@ -84,27 +83,26 @@
 
 <article class="single">
   <header>
-    <h1 id="github-blogging">Github Blogging</h1>
+    <h1 id="9-reasons-you-should-be-using-visual-studio-code">9 Reasons You Should Be Using Visual Studio Code</h1>
     <p>
-          Posted on Thu 23 June 2016 in <a href="https://taylorbrazelton.com/category/general.html">general</a>
+          Posted on Mon 18 July 2016 in <a href="https://taylorbrazelton.com/category/python.html">python</a>
 
 
     </p>
   </header>
   <div>
-    <p>Hello internet!</p>
-<p>I'm just going to get stright to the point, I use to have a personal/tech blog @ <a href="http://tech-fyi.net">tech-fyi.net</a> but like bread, it got stale. I started it over 7 years ago when I was in high school. Since then, I have graduated with a bachelor's degree in Computer Science from Purdue and have moved on to more interesting things in life. </p>
-<p>More soon. Don't forget to interact with me on <a href="http://twitter.com/Ryanb58">Twitter</a>!</p>
+    <p>1) Code Completion
+Microsoft's added amazing intelesense support to Code.</p>
+<p>Reaction To: https://blog.michaelckennedy.net/2015/11/19/9-reasons-you-should-be-using-pycharm/</p>
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="https://taylorbrazelton.com/tag/blog.html">blog</a>
-      <a href="https://taylorbrazelton.com/tag/github.html">github</a>
-      <a href="https://taylorbrazelton.com/tag/blogging.html">blogging</a>
-      <a href="https://taylorbrazelton.com/tag/tech-fyi.html">tech-fyi</a>
-      <a href="https://taylorbrazelton.com/tag/new.html">new</a>
-      <a href="https://taylorbrazelton.com/tag/first.html">first</a>
-      <a href="https://taylorbrazelton.com/tag/post.html">post</a>
+      <a href="https://taylorbrazelton.com/tag/cool.html">cool</a>
+      <a href="https://taylorbrazelton.com/tag/python.html">python</a>
+      <a href="https://taylorbrazelton.com/tag/std.html">std</a>
+      <a href="https://taylorbrazelton.com/tag/standard.html">standard</a>
+      <a href="https://taylorbrazelton.com/tag/library.html">library</a>
+      <a href="https://taylorbrazelton.com/tag/functions.html">functions</a>
     </p>
   </div>
 
