--- a/drafts/writing-better-unittests.html
+++ b/drafts/writing-better-unittests.html
@@ -22,28 +22,29 @@
 
 
 <meta name="author" content="Taylor Brazelton" />
-<meta name="description" content="Hello internet! I'm just going to get stright to the point, I use to have a personal/tech blog @ tech-fyi.net but like bread, it got stale. I started it over 7 years ago when I was in high school. Since then, I have graduated with a bachelor's degree in Computer Science from Purdue and have moved on to more interesting things in life. More soon. Don't forget to interact with me on Twitter!" />
-<meta name="keywords" content="blog, github, blogging, tech-fyi, new, first, post">
+<meta name="description" content="Key Principles to Follow: Write Tests Write Good Tests Write Small Tests (i.e. One Action Per Test) Do Not Copy Paste Between Tests Utilize your setup and tear down functions appropriately." />
+<meta name="keywords" content="write, better, unit, tests, unittest, mock, agile, buzz">
 <meta property="og:site_name" content="TAYLOR BRAZELTON"/>
-<meta property="og:title" content="Github Blogging"/>
-<meta property="og:description" content="Hello internet! I'm just going to get stright to the point, I use to have a personal/tech blog @ tech-fyi.net but like bread, it got stale. I started it over 7 years ago when I was in high school. Since then, I have graduated with a bachelor's degree in Computer Science from Purdue and have moved on to more interesting things in life. More soon. Don't forget to interact with me on Twitter!"/>
+<meta property="og:title" content="Writing Better Unittests"/>
+<meta property="og:description" content="Key Principles to Follow: Write Tests Write Good Tests Write Small Tests (i.e. One Action Per Test) Do Not Copy Paste Between Tests Utilize your setup and tear down functions appropriately."/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://taylorbrazelton.com/2016/Jun/23/github-blogging/"/>
+<meta property="og:url" content="https://taylorbrazelton.com/drafts/writing-better-unittests.html"/>
 <meta property="og:type" content="article"/>
-<meta property="article:published_time" content="2016-06-23 21:06:00-04:00"/>
-<meta property="article:modified_time" content="2016-06-23 21:06:00-04:00"/>
+<meta property="article:published_time" content="2016-10-25 00:00:00-04:00"/>
+<meta property="article:modified_time" content="2016-10-25 00:00:00-04:00"/>
 <meta property="article:author" content="https://taylorbrazelton.com/author/taylor-brazelton.html">
-<meta property="article:section" content="general"/>
-<meta property="article:tag" content="blog"/>
-<meta property="article:tag" content="github"/>
-<meta property="article:tag" content="blogging"/>
-<meta property="article:tag" content="tech-fyi"/>
-<meta property="article:tag" content="new"/>
-<meta property="article:tag" content="first"/>
-<meta property="article:tag" content="post"/>
+<meta property="article:section" content="testing"/>
+<meta property="article:tag" content="write"/>
+<meta property="article:tag" content="better"/>
+<meta property="article:tag" content="unit"/>
+<meta property="article:tag" content="tests"/>
+<meta property="article:tag" content="unittest"/>
+<meta property="article:tag" content="mock"/>
+<meta property="article:tag" content="agile"/>
+<meta property="article:tag" content="buzz"/>
 <meta property="og:image" content="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120">
 
-  <title>TAYLOR BRAZELTON &ndash; Github Blogging</title>
+  <title>TAYLOR BRAZELTON &ndash; Writing Better Unittests</title>
 </head>
 <body>
   <aside>
@@ -84,27 +85,34 @@
 
 <article class="single">
   <header>
-    <h1 id="github-blogging">Github Blogging</h1>
+    <h1 id="writing-better-unittests">Writing Better Unittests</h1>
     <p>
-          Posted on Thu 23 June 2016 in <a href="https://taylorbrazelton.com/category/general.html">general</a>
+          Posted on Tue 25 October 2016 in <a href="https://taylorbrazelton.com/category/testing.html">testing</a>
 
 
     </p>
   </header>
   <div>
-    <p>Hello internet!</p>
-<p>I'm just going to get stright to the point, I use to have a personal/tech blog @ <a href="http://tech-fyi.net">tech-fyi.net</a> but like bread, it got stale. I started it over 7 years ago when I was in high school. Since then, I have graduated with a bachelor's degree in Computer Science from Purdue and have moved on to more interesting things in life. </p>
-<p>More soon. Don't forget to interact with me on <a href="http://twitter.com/Ryanb58">Twitter</a>!</p>
+    <h3>Key Principles to Follow:</h3>
+<ul>
+<li>Write Tests</li>
+<li>Write Good Tests</li>
+<li>Write Small Tests (i.e. One Action Per Test)</li>
+<li>Do Not Copy Paste Between Tests</li>
+<li>Utilize your setup and tear down functions appropriately.</li>
+<li></li>
+</ul>
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="https://taylorbrazelton.com/tag/blog.html">blog</a>
-      <a href="https://taylorbrazelton.com/tag/github.html">github</a>
-      <a href="https://taylorbrazelton.com/tag/blogging.html">blogging</a>
-      <a href="https://taylorbrazelton.com/tag/tech-fyi.html">tech-fyi</a>
-      <a href="https://taylorbrazelton.com/tag/new.html">new</a>
-      <a href="https://taylorbrazelton.com/tag/first.html">first</a>
-      <a href="https://taylorbrazelton.com/tag/post.html">post</a>
+      <a href="https://taylorbrazelton.com/tag/write.html">write</a>
+      <a href="https://taylorbrazelton.com/tag/better.html">better</a>
+      <a href="https://taylorbrazelton.com/tag/unit.html">unit</a>
+      <a href="https://taylorbrazelton.com/tag/tests.html">tests</a>
+      <a href="https://taylorbrazelton.com/tag/unittest.html">unittest</a>
+      <a href="https://taylorbrazelton.com/tag/mock.html">mock</a>
+      <a href="https://taylorbrazelton.com/tag/agile.html">agile</a>
+      <a href="https://taylorbrazelton.com/tag/buzz.html">buzz</a>
     </p>
   </div>
 
