--- a/tags.html
+++ b/tags.html
@@ -22,11 +22,11 @@
 
 
     <meta name="author" content="Taylor Brazelton" />
-    <meta name="description" content="Loaded with random information, Taylor Brazelton seeks to share what he has learned via this blog." />
+    <meta name="description" content="Loaded with information, Taylor Brazelton seeks to share this information by distributing some to the world on this blog." />
 <meta property="og:site_name" content="TAYLOR BRAZELTON"/>
 <meta property="og:type" content="blog"/>
 <meta property="og:title" content="TAYLOR BRAZELTON"/>
-<meta property="og:description" content="Loaded with random information, Taylor Brazelton seeks to share what he has learned via this blog."/>
+<meta property="og:description" content="Loaded with information, Taylor Brazelton seeks to share this information by distributing some to the world on this blog."/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="https://taylorbrazelton.com"/>
 <meta property="og:image" content="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120">
@@ -42,7 +42,7 @@
       </a>
       <h1><a href="https://taylorbrazelton.com">Taylor Brazelton</a></h1>
 
-<p>cat /dev/random | more</p>
+<p>loaded with information</p>
       <nav>
         <ul class="list">
           <li><a href="https://taylorbrazelton.com/pages/about-me.html#about-me">About Me</a></li>
@@ -77,7 +77,8 @@
 </h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="https://taylorbrazelton.com/tag/arcade.html">arcade</a> (1)</li>
+    <ul class="list">          <li><a href="https://taylorbrazelton.com/tag/2016.html">2016</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/arcade.html">arcade</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/better.html">better</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/blog.html">blog</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/blogging.html">blogging</a> (1)</li>
@@ -85,26 +86,33 @@
           <li><a href="https://taylorbrazelton.com/tag/docker.html">docker</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/easiest.html">easiest</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/emulator.html">emulator</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/end.html">end</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/favorite.html">favorite</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/first.html">first</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/getting.html">getting</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/github.html">github</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/install.html">install</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/linux.html">linux</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/new.html">new</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/of.html">of</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/out.html">out</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/packages.html">packages</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/pelican.html">pelican</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/pi.html">pi</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/post.html">post</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/price.html">price</a> (1)</li>
-          <li><a href="https://taylorbrazelton.com/tag/python.html">python</a> (2)</li>
+          <li><a href="https://taylorbrazelton.com/tag/python.html">python</a> (3)</li>
           <li><a href="https://taylorbrazelton.com/tag/raspberry.html">raspberry</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/refactoring.html">refactoring</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/started.html">started</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/tech-fyi.html">tech-fyi</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/the.html">the</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/tips.html">tips</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/top.html">top</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/using.html">using</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/virtualenv.html">virtualenv</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/writing.html">writing</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/year.html">year</a> (1)</li>
     </ul>
   </div>
 </article>
@@ -136,7 +144,7 @@
   "name": " TAYLOR BRAZELTON ",
   "url" : "https://taylorbrazelton.com",
   "image": "https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120",
-  "description": "Loaded with random information, Taylor Brazelton seeks to share what he has learned via this blog."
+  "description": "Loaded with information, Taylor Brazelton seeks to share this information by distributing some to the world on this blog."
 }
 </script>
 </body>
