--- a/drafts/on-prems-the-engineers-perspective.html
+++ b/drafts/on-prems-the-engineers-perspective.html
@@ -44,6 +44,7 @@
 <meta property="og:image" content="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120">
 
   <title>TAYLOR BRAZELTON &ndash; On-prems - The Engineer's Perspective</title>
+
 </head>
 <body>
   <aside>
@@ -53,7 +54,7 @@
       </a>
       <h1><a href="https://taylorbrazelton.com">Taylor Brazelton</a></h1>
 
-<p>loaded with information</p>
+<p>zeros and ones</p>
       <nav>
         <ul class="list">
           <li><a href="https://taylorbrazelton.com/pages/about-me.html#about-me">About Me</a></li>
@@ -67,8 +68,11 @@
         <li><a class="sc-twitter" href="http://twitter.com/Ryanb58" target="_blank"><i class="fa fa-twitter"></i></a></li>
       </ul>
     </div>
+
+
   </aside>
   <main>
+
     <nav>
       <a href="https://taylorbrazelton.com">    Home
 </a>
@@ -91,6 +95,8 @@
 
     </p>
   </header>
+
+
   <div>
     <p>So you want to build an on-prem. Great! On-prems are cash rich enviroments that
 allow for sales into the entrerprise marketspace without much effort. Right?</p>
@@ -138,9 +144,10 @@ http://www.cbronline.com/news/cloud/private/how-to-build-a-private-cloud-5-best-
 
 
 
+
 <div id="disqus_thread"></div>
 <script type="text/javascript">
-    var disqus_shortname = 'loadedtaylor';
+    var disqus_shortname = 'taylorbrazelton';
     (function() {
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
         dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
@@ -180,7 +187,7 @@ http://www.cbronline.com/news/cloud/private/how-to-build-a-private-cloud-5-best-
   "name": " TAYLOR BRAZELTON ",
   "url" : "https://taylorbrazelton.com",
   "image": "https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120",
-  "description": "Loaded with information, Taylor Brazelton seeks to share this information by distributing some to the world on this blog."
+  "description": "Taylor Brazelton tries to make sense of computers and the internet. What could possibly go wrong?"
 }
 </script>
 </body>
