--- a/drafts/unknown-python-std-library-functions.html
+++ b/drafts/unknown-python-std-library-functions.html
@@ -43,6 +43,7 @@
 <meta property="og:image" content="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120">
 
   <title>TAYLOR BRAZELTON &ndash; Unknown Python Std Library Functions.</title>
+
 </head>
 <body>
   <aside>
@@ -52,7 +53,7 @@
       </a>
       <h1><a href="https://taylorbrazelton.com">Taylor Brazelton</a></h1>
 
-<p>loaded with information</p>
+<p>zeros and ones</p>
       <nav>
         <ul class="list">
           <li><a href="https://taylorbrazelton.com/pages/about-me.html#about-me">About Me</a></li>
@@ -66,8 +67,11 @@
         <li><a class="sc-twitter" href="http://twitter.com/Ryanb58" target="_blank"><i class="fa fa-twitter"></i></a></li>
       </ul>
     </div>
+
+
   </aside>
   <main>
+
     <nav>
       <a href="https://taylorbrazelton.com">    Home
 </a>
@@ -90,6 +94,8 @@
 
     </p>
   </header>
+
+
   <div>
     <h1>Cool Python Standard Library Functions</h1>
 <p>filter()
@@ -112,9 +118,10 @@ zip()</p>
 
 
 
+
 <div id="disqus_thread"></div>
 <script type="text/javascript">
-    var disqus_shortname = 'loadedtaylor';
+    var disqus_shortname = 'taylorbrazelton';
     (function() {
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
         dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
@@ -154,7 +161,7 @@ zip()</p>
   "name": " TAYLOR BRAZELTON ",
   "url" : "https://taylorbrazelton.com",
   "image": "https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120",
-  "description": "Loaded with information, Taylor Brazelton seeks to share this information by distributing some to the world on this blog."
+  "description": "Taylor Brazelton tries to make sense of computers and the internet. What could possibly go wrong?"
 }
 </script>
 </body>
