--- a/drafts/writing-better-unittests.html
+++ b/drafts/writing-better-unittests.html
@@ -45,6 +45,7 @@
 <meta property="og:image" content="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120">
 
   <title>TAYLOR BRAZELTON &ndash; Writing Better Unittests</title>
+
 </head>
 <body>
   <aside>
@@ -54,7 +55,7 @@
       </a>
       <h1><a href="https://taylorbrazelton.com">Taylor Brazelton</a></h1>
 
-<p>loaded with information</p>
+<p>zeros and ones</p>
       <nav>
         <ul class="list">
           <li><a href="https://taylorbrazelton.com/pages/about-me.html#about-me">About Me</a></li>
@@ -68,8 +69,11 @@
         <li><a class="sc-twitter" href="http://twitter.com/Ryanb58" target="_blank"><i class="fa fa-twitter"></i></a></li>
       </ul>
     </div>
+
+
   </aside>
   <main>
+
     <nav>
       <a href="https://taylorbrazelton.com">    Home
 </a>
@@ -92,6 +96,8 @@
 
     </p>
   </header>
+
+
   <div>
     <h3>Key Principles to Follow:</h3>
 <ul>
@@ -118,9 +124,10 @@
 
 
 
+
 <div id="disqus_thread"></div>
 <script type="text/javascript">
-    var disqus_shortname = 'loadedtaylor';
+    var disqus_shortname = 'taylorbrazelton';
     (function() {
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
         dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
@@ -160,7 +167,7 @@
   "name": " TAYLOR BRAZELTON ",
   "url" : "https://taylorbrazelton.com",
   "image": "https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120",
-  "description": "Loaded with information, Taylor Brazelton seeks to share this information by distributing some to the world on this blog."
+  "description": "Taylor Brazelton tries to make sense of computers and the internet. What could possibly go wrong?"
 }
 </script>
 </body>
