--- a/drafts/9-reasons-you-should-be-using-visual-studio-code.html
+++ b/drafts/9-reasons-you-should-be-using-visual-studio-code.html
@@ -2,6 +2,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="HandheldFriendly" content="True" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="index, follow" />
+
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" type="text/css" href="https://taylorbrazelton.com/theme/stylesheet/style.min.css">
@@ -14,19 +20,25 @@
 
 
 
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="HandheldFriendly" content="True" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="robots" content="index, follow" />
+<!-- Google Analytics -->
+<script type="text/javascript">
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-52478838-2', 'auto');
+  ga('send', 'pageview');
+</script>
+<!-- End Google Analytics -->
 
 <meta name="author" content="Taylor Brazelton" />
-<meta name="description" content="1) Code Completion Microsoft's added amazing intelesense support to Code. Reaction To: https://blog.michaelckennedy.net/2015/11/19/9-reasons-you-should-be-using-pycharm/" />
+<meta name="description" content="1) Code Completion Microsoft&#39;s added amazing intelesense support to Code. Reaction To: https://blog.michaelckennedy.net/2015/11/19/9-reasons-you-should-be-using-pycharm/" />
 <meta name="keywords" content="cool, python, std, standard, library, functions">
+
 <meta property="og:site_name" content="TAYLOR BRAZELTON"/>
 <meta property="og:title" content="9 Reasons You Should Be Using Visual Studio Code"/>
-<meta property="og:description" content="1) Code Completion Microsoft's added amazing intelesense support to Code. Reaction To: https://blog.michaelckennedy.net/2015/11/19/9-reasons-you-should-be-using-pycharm/"/>
+<meta property="og:description" content="1) Code Completion Microsoft&#39;s added amazing intelesense support to Code. Reaction To: https://blog.michaelckennedy.net/2015/11/19/9-reasons-you-should-be-using-pycharm/"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="https://taylorbrazelton.com/drafts/9-reasons-you-should-be-using-visual-studio-code.html"/>
 <meta property="og:type" content="article"/>
@@ -62,7 +74,7 @@
       </nav>
 
       <ul class="social">
-        <li><a class="sc-linkedin" href="https://www.linkedin.com/in/ryanb58" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+        <li><a class="sc-linkedin" href="https://www.linkedin.com/in/taylorbrazelton" target="_blank"><i class="fa fa-linkedin"></i></a></li>
         <li><a class="sc-github" href="http://github.com/ryanb58" target="_blank"><i class="fa fa-github"></i></a></li>
         <li><a class="sc-twitter" href="http://twitter.com/Ryanb58" target="_blank"><i class="fa fa-twitter"></i></a></li>
       </ul>
@@ -87,6 +99,7 @@
 
 <article class="single">
   <header>
+      
     <h1 id="9-reasons-you-should-be-using-visual-studio-code">9 Reasons You Should Be Using Visual Studio Code</h1>
     <p>
           Posted on Mon 18 July 2016 in <a href="https://taylorbrazelton.com/category/python.html">python</a>
@@ -114,7 +127,10 @@ Microsoft's added amazing intelesense support to Code.</p>
 
 
 
+    <div class="addthis_relatedposts_inline">
 
+
+<!-- Disqus -->
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     var disqus_shortname = 'taylorbrazelton';
@@ -128,25 +144,15 @@ Microsoft's added amazing intelesense support to Code.</p>
         Please enable JavaScript to view comments.
 
 </noscript>
+<!-- End Disqus -->
 </article>
 
     <footer>
-<p>&copy; Taylor Brazelton </p>
+<p>&copy;  </p>
 <p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
 </p>    </footer>
   </main>
 
-<!-- Google Analytics -->
-<script type="text/javascript">
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-52478838-2', 'auto');
-  ga('send', 'pageview');
-</script>
-<!-- End Google Analytics -->
 
 
 
@@ -160,5 +166,6 @@ Microsoft's added amazing intelesense support to Code.</p>
   "description": "Taylor Brazelton tries to make sense of computers and the internet. What could possibly go wrong?"
 }
 </script>
+
 </body>
 </html>
