--- a/tags.html
+++ b/tags.html
@@ -2,6 +2,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="HandheldFriendly" content="True" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="index, follow" />
+
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" type="text/css" href="https://taylorbrazelton.com/theme/stylesheet/style.min.css">
@@ -14,12 +20,17 @@
 
 
 
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="HandheldFriendly" content="True" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="robots" content="index, follow" />
+<!-- Google Analytics -->
+<script type="text/javascript">
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-52478838-2', 'auto');
+  ga('send', 'pageview');
+</script>
+<!-- End Google Analytics -->
 
     <meta name="author" content="Taylor Brazelton" />
     <meta name="description" content="Taylor Brazelton tries to make sense of computers and the internet. What could possibly go wrong?" />
@@ -52,7 +63,7 @@
       </nav>
 
       <ul class="social">
-        <li><a class="sc-linkedin" href="https://www.linkedin.com/in/ryanb58" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+        <li><a class="sc-linkedin" href="https://www.linkedin.com/in/taylorbrazelton" target="_blank"><i class="fa fa-linkedin"></i></a></li>
         <li><a class="sc-github" href="http://github.com/ryanb58" target="_blank"><i class="fa fa-github"></i></a></li>
         <li><a class="sc-twitter" href="http://twitter.com/Ryanb58" target="_blank"><i class="fa fa-twitter"></i></a></li>
       </ul>
@@ -83,32 +94,39 @@
   <div>
     <ul class="list">          <li><a href="https://taylorbrazelton.com/tag/2016.html">2016</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/arcade.html">arcade</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/away.html">away</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/better.html">better</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/blog.html">blog</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/blogging.html">blogging</a> (1)</li>
-          <li><a href="https://taylorbrazelton.com/tag/code.html">code</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/code.html">code</a> (2)</li>
           <li><a href="https://taylorbrazelton.com/tag/docker.html">docker</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/easiest.html">easiest</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/emulator.html">emulator</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/end.html">end</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/favorite.html">favorite</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/first.html">first</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/from.html">from</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/getting.html">getting</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/github.html">github</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/install.html">install</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/legacy.html">legacy</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/linux.html">linux</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/moving.html">moving</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/new.html">new</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/of.html">of</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/out.html">out</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/packages.html">packages</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/pelican.html">pelican</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/phases.html">phases</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/pi.html">pi</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/plan.html">plan</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/post.html">post</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/price.html">price</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/python.html">python</a> (3)</li>
           <li><a href="https://taylorbrazelton.com/tag/raspberry.html">raspberry</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/refactoring.html">refactoring</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/started.html">started</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/strategy.html">strategy</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/tech-fyi.html">tech-fyi</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/the.html">the</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/tips.html">tips</a> (1)</li>
@@ -122,22 +140,11 @@
 </article>
 
     <footer>
-<p>&copy; Taylor Brazelton </p>
+<p>&copy;  </p>
 <p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
 </p>    </footer>
   </main>
 
-<!-- Google Analytics -->
-<script type="text/javascript">
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-52478838-2', 'auto');
-  ga('send', 'pageview');
-</script>
-<!-- End Google Analytics -->
 
 
 
@@ -151,5 +158,6 @@
   "description": "Taylor Brazelton tries to make sense of computers and the internet. What could possibly go wrong?"
 }
 </script>
+
 </body>
 </html>
