Added new Django Migration downgrade in docker swarm post.

--- a/archives.html
+++ b/archives.html
@@ -93,6 +93,8 @@
   </header>
   <div>
     <dl>
+      <dt>Fri 02 March 2018</dt>
+      <dd><a href="https://taylorbrazelton.com/2018/Mar/02/django-migrations-downgrade-in-docker-swarm/">Django Migrations Downgrade in Docker Swarm</a></dd>
       <dt>Thu 15 February 2018</dt>
       <dd><a href="https://taylorbrazelton.com/2018/Feb/15/strategy-for-moving-away-from-legacy-code/">Strategy for Moving Away From Legacy Code</a></dd>
       <dt>Fri 09 December 2016</dt>
