--- a/tags.html
+++ b/tags.html
@@ -99,7 +99,9 @@
           <li><a href="https://taylorbrazelton.com/tag/blog.html">blog</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/blogging.html">blogging</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/code.html">code</a> (2)</li>
-          <li><a href="https://taylorbrazelton.com/tag/docker.html">docker</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/django.html">django</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/docker.html">docker</a> (2)</li>
+          <li><a href="https://taylorbrazelton.com/tag/downgrade.html">downgrade</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/easiest.html">easiest</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/emulator.html">emulator</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/end.html">end</a> (1)</li>
@@ -114,6 +116,7 @@
           <li><a href="https://taylorbrazelton.com/tag/moving.html">moving</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/new.html">new</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/of.html">of</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/orchestration.html">orchestration</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/out.html">out</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/packages.html">packages</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/pelican.html">pelican</a> (1)</li>
@@ -122,11 +125,12 @@
           <li><a href="https://taylorbrazelton.com/tag/plan.html">plan</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/post.html">post</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/price.html">price</a> (1)</li>
-          <li><a href="https://taylorbrazelton.com/tag/python.html">python</a> (3)</li>
+          <li><a href="https://taylorbrazelton.com/tag/python.html">python</a> (4)</li>
           <li><a href="https://taylorbrazelton.com/tag/raspberry.html">raspberry</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/refactoring.html">refactoring</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/started.html">started</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/strategy.html">strategy</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/swarm.html">swarm</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/tech-fyi.html">tech-fyi</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/the.html">the</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/tips.html">tips</a> (1)</li>
