New blog post + google analytics.

--- a/themes/minimal-dark/macros.html
+++ b/themes/minimal-dark/macros.html
@@ -2,6 +2,15 @@
 <head>
     <title>{{ page_title }}</title>
     <link rel="stylesheet" href="/css/style.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LD3MQXQGQ2"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-LD3MQXQGQ2');
+    </script>
 </head>
 {% endmacro -%}
 
