Fixed navigation bar.

--- a/themes/minimal-dark/macros.html
+++ b/themes/minimal-dark/macros.html
@@ -16,6 +16,7 @@
 
 {% macro navigation(pages) -%}
 <nav><ul>
+    <li><a href="/">Home</a></li>
     {% for page in pages %}
         <li><a href="{{ page.url }}">{{ page.title }}</a></li>
     {% endfor %}
