Italicizied the posted on date.

--- a/themes/minimal-dark/post.html
+++ b/themes/minimal-dark/post.html
@@ -5,7 +5,7 @@
     <body>
         {{ macros.navigation(content.pages) }}
         <h1>{{ this.title }}</h1>
-        <p>Posted at {{ this.date }}</p>
+        <p><i>Posted on {{ this.date.strftime('%Y-%m-%d') }}</i></p>
         {{ this.content }}
         <hr />
         <p><a href="{{ config.baseURL }}">Return to the homepage &#10558;</a></p>
