Added XXIIVV webring.

--- a/themes/my-custom-theme/macros.html
+++ b/themes/my-custom-theme/macros.html
@@ -72,4 +72,17 @@
         {% endfor %}
     </ul>
 </nav>
+{% endmacro -%} {% macro footer() -%}
+
+<a
+    href="https://webring.xxiivv.com/#your-id-here"
+    target="_blank"
+    rel="noopener"
+>
+    <img
+        src="https://webring.xxiivv.com/icon.black.svg"
+        alt="XXIIVV webring"
+        style="max-height: 40px"
+    />
+</a>
 {% endmacro -%}
