--- a/themes/my-custom-theme/macros.html
+++ b/themes/my-custom-theme/macros.html
@@ -75,7 +75,7 @@
 {% endmacro -%} {% macro footer() -%}
 
 <a
-    href="https://webring.xxiivv.com/#your-id-here"
+    href="https://webring.xxiivv.com/#taylorbrazelton"
     target="_blank"
     rel="noopener"
 >
